03 Sept 4
---------
+ Ditto window snaps to window sides

03 Sept 3
---------
+ Text Item Parser in CopyProperties - parses a CF_TEXT item into multiple
  CF_TEXT items based upon a given separator string.
  + CEdit m_ParseEdit
  + CButton m_ParseButton
  + void OnBnClickedParseButton()
  + Misc 
    + BYTE GetEscapeChar( BYTE ch );
    + CString RemoveEscapes( const char* str );

+ CClip::AddFormat

+ CClipList::AddToDB( bool bLatestTime = false, bool bShowStatus = true )

* CClipFormat frees m_hgData on destruction

* changed CCP_MainApp::SaveAllClips to CCP_MainApp::SaveCopyClips

* changed CCP_MainApp::FixTime to CClip::MakeLatestTime()

! fixed bad connect / disconnect logic in CClipboardViewer


03 Sept 2
---------
* ProcessCopy - redesigned to fix the fast copy bugs.
  . The same source object is used for the description as is stored in the db.
  . Actual copying from the clipboard is (usually) not interrupted.
  + CClip - For managing a Clip (copy of the clipboard) as a single unit.
  + CCopyThread - handles copying the clipboard when the clipboard changes and
      safely communicating with the Main thread.
  + CClipboardViewer - the Clipboard Viewer window (code factored out from
      MainWnd)
  + uses AllowDuplicates (non-sequential duplicates) flag

* ProcessPaste - redesigned for delayed rendering during drag and drop and
  immediate rendering otherwise.
  + uses UpdateTimeOnPaste flag
  + uses SaveMultiPaste flag
    
* CCP_MainApp Copy and Paste Management
  + bool EnableCbCopy(bool bState); // copy clipboad when it changes
  + long SaveAllClips();  // saves all clips copied by CCopyThread
  + void ReloadTypes();   // reloads the Types Table on demand
  + void Delayed_RemoveOldEntries( UINT delay ); // based on timer
  + void RefreshView();   // refreshes the view if it is visible
  + void OnCopyCompleted( long lLastID, int count = 1 );
  + void OnPasteCompleted();
  + void SetStatus(char*) // for displaying status in the titlebar.
